Implement blogs section

--- a/index.html
+++ b/index.html
@@ -53,5 +53,44 @@
 				</div>
 			</div>
 		</section>
+		<section class="blog-section">
+			<div class="blog-content">
+				<div class="two-col">
+					<p>Tech Blog</p>
+					<div class="blog-posts">
+						<div class="blog-post">
+							<p class="blog-title">This Is Your Brain On Helium</p>
+							<p class="blog-text">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+								Dolorum, voluptate mollitia voluptates iure harum autem
+								facere aut cum. Dolorem, molestias animi nisi esse quam
+								quo optio! Quidem nobis inventore voluptatum.
+							</p>
+							<p class="blog-date">May 19, 2025</p>
+						</div>
+						<div class="blog-post">
+							<p class="blog-title">In Search Of Intelligence</p>
+							<p class="blog-text">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+								Dolorum, voluptate mollitia voluptates iure harum autem
+								facere aut cum. Dolorem, molestias animi nisi esse quam
+								quo optio! Quidem nobis inventore voluptatum.
+							</p>
+							<p class="blog-date">June 12, 2025</p>
+						</div>
+						<div class="blog-post">
+							<p class="blog-title">Should Public Transit Be Free?</p>
+							<p class="blog-text">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+								Dolorum, voluptate mollitia voluptates iure harum autem
+								facere aut cum. Dolorem, molestias animi nisi esse quam
+								quo optio! Quidem nobis inventore voluptatum.
+							</p>
+							<p class="blog-date">March 17, 2025</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
