Implement events section

--- a/index.html
+++ b/index.html
@@ -92,5 +92,29 @@
 				</div>
 			</div>
 		</section>
+		<section class="events-section">
+			<div class="events-content">
+				<div class="two-col">
+					<p>Speaking Events</p>
+					<div class="events-card">
+						<div class="event-card">
+							<p class="event-title">NY Economics Forum</p>
+							<p class="event-location">New York, NY</p>
+							<p class="event-date">August 25th 2025, 7:00pm</p>
+						</div>
+						<div class="event-card">
+							<p class="event-title">Emerging Tech Meet-Up</p>
+							<p class="event-location">San Francisco, CA</p>
+							<p class="event-date">August 25th 2025, 7:00pm</p>
+						</div>
+						<div class="event-card">
+							<p class="event-title">Creative Code Meetup</p>
+							<p class="event-location">Denver, CO</p>
+							<p class="event-date">August 25th 2025, 7:00pm</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
