--- a/index.html
+++ b/index.html
@@ -116,5 +116,12 @@
 				</div>
 			</div>
 		</section>
+		<footer>
+			<div class="footer-content">
+				<img src="images/instagram.png" alt="" />
+				<img src="images/twitter.png" alt="" />
+				<p>Made With ❤️</p>
+			</div>
+		</footer>
 	</body>
 </html>
